Usuario jugador funcionalidades implementadas

--- a/templates/base_home.html
+++ b/templates/base_home.html
@@ -14,7 +14,7 @@
       </div>
       <div>
         {% if user %}
-        <span class="mr-4">Hola, {{ user.nombre }}</span>
+        <span class="mr-4">Hola, {{ usuario.nombre }}</span>
         <a
           href="{% url 'logout' %}"
           class="bg-red-600 hover:bg-red-700 text-white py-1 px-3 rounded"
