--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% block content %}
 <div
   class="min-h-screen flex flex-col items-center justify-center bg-gray-100 px-4"
 >
