--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,10 @@
     <title>{% block title %}MatchPoint{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 text-gray-800">
-    <header class="bg-[#38A169] text-white py-4 shadow">
-      <div class="container mx-auto px-4">
-        <h1 class="text-xl font-bold">MatchPoint Administración</h1>
-      </div>
-    </header>
-
+  <body
+    class="bg-gray-100 text-gray-800"
+    style="background-image: url('../static/')"
+  >
     <main class="min-h-screen">{% block content %}{% endblock %}</main>
   </body>
 </html>
