--- a/templates/usuarios/home_admin_club.html
+++ b/templates/usuarios/home_admin_club.html
@@ -1,4 +1,4 @@
-{% extends "base_home" %} {% block content %}
+{% extends "base_home.html" %} {% block content %}
 <div class="max-w-4xl mx-auto p-6 bg-white rounded shadow">
   <h1 class="text-2xl font-bold mb-4">Bienvenido, {{ user.nombre }}</h1>
 
