--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -1,10 +1,14 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div
   class="flex items-center justify-center h-screen bg-cover bg-center"
-  style="background-image: url('../../static/image.jpg')"
+  style="background-image: url('/static/image.jpg')"
 >
-  <div class="bg-white p-8 rounded shadow-md w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-6 text-center">Iniciar sesión</h2>
+  <div
+    class="bg-white bg-opacity-90 backdrop-blur-md shadow-xl rounded-2xl p-10 w-full max-w-md"
+  >
+    <h2 class="text-3xl font-extrabold text-center text-green-700 mb-6">
+      Bienvenido a MatchPoint
+    </h2>
     {% if messages %}
     <div class="text-red-500 mb-4">
       {% for message in messages %}
@@ -12,35 +16,41 @@
       {% endfor %}
     </div>
     {% endif %}
-    <form method="post">
+    <form method="post" class="space-y-4">
       {% csrf_token %}
-      <div class="mb-4">
-        <label class="block mb-1">Correo electrónico</label>
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1"
+          >Correo electrónico</label
+        >
         <input
           type="email"
           name="email"
-          class="w-full border border-gray-300 rounded p-2"
+          class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"
           required
         />
       </div>
-      <div class="mb-6">
-        <label class="block mb-1">Contraseña</label>
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1"
+          >Contraseña</label
+        >
         <input
           type="password"
           name="contraseña"
-          class="w-full border border-gray-300 rounded p-2"
+          class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"
           required
         />
       </div>
       <button
         type="submit"
-        class="bg-green-600 text-white py-2 px-4 rounded w-full hover:bg-blue-700"
+        class="w-full bg-green-600 text-white font-semibold py-2 rounded-lg hover:bg-green-700 transition"
       >
         Entrar
       </button>
-      <p class="mt-4 text-center">
+      <p class="text-center text-sm text-gray-700 mt-4">
         ¿No tienes cuenta?
-        <a href="{% url 'registro' %}" class="text-blue-600 underline"
+        <a
+          href="{% url 'registro' %}"
+          class="text-green-600 font-medium hover:underline"
           >Regístrate</a
         >
       </p>
